default/objects/WS_Data_Type__c/WS_Data_Type__c.object-meta.xml
<CustomObject>
    <label>Cross-Sell Data Type</label>
    <nameField>
        <displayFormat>WSDT-{0000}</displayFormat>
        <label>WS Data Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cross-Sell Data Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>