default/objects/WS_Data_Type__c/fields/Apply_To_All_Cross_Sell_Maps__c.field-meta.xml
<CustomField>
    <fullName>Apply_To_All_Cross_Sell_Maps__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked, All Cross-Sell Maps will have access to this Data Type</description>
    <inlineHelpText>If this is checked, All Cross-Sell Maps will have access to this Data Type</inlineHelpText>
    <label>Apply To All CROSS-SELL Maps</label>
    <type>Checkbox</type>
</CustomField>