default/objects/WS_Data_Type__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>Color in the form of #RRGGBB (example: #FF0000 for red)</description>
    <inlineHelpText>Color in the form of #RRGGBB (example: #FF0000 for red)</inlineHelpText>
    <label>Color</label>
    <length>255</length>
    <type>Text</type>
</CustomField>