default/objects/WS_Data_Type__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Picklist</fullName>
                <default>true</default>
                <label>Picklist</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>