default/objects/WS_Data_Type__c/fields/White_Space__c.field-meta.xml
<CustomField>
    <fullName>White_Space__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>White Space</label>
    <referenceTo>White_Space__c</referenceTo>
    <relationshipLabel>Cross-Sell Data Types</relationshipLabel>
    <relationshipName>Cross_Sell_Data_Types</relationshipName>
    <type>Lookup</type>
</CustomField>