default/objects/WS_Data_Type__c/validationRules/Picklist_Values.validationRule-meta.xml
<ValidationRule>
    <fullName>Picklist_Values</fullName>
    <active>true</active>
    <description>If field type is picklist then the picklist value field cannot be empty</description>
    <errorConditionFormula>ISPICKVAL(Data_Type__c, &apos;Picklist&apos;) &amp;&amp; ISBLANK( Picklist_Values__c )</errorConditionFormula>
    <errorDisplayField>Picklist_Values__c</errorDisplayField>
    <errorMessage>Picklist Data Types must have Picklist Values</errorMessage>
</ValidationRule>